Doc/force-app/main/default/objects/Lead/fields/Active_Directory__c.field-meta.xml
<CustomField>
    <fullName>Active_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Active Directory</label>
    <type>Checkbox</type>
</CustomField>