Doc/force-app/main/default/objects/Lead/fields/BizDev_Owner__c.field-meta.xml
<CustomField>
    <fullName>BizDev_Owner__c</fullName>
    <label>BizDev Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bob Schick</fullName>
            </value>
            <value>
                <fullName>James Nielsen</fullName>
            </value>
            <value>
                <fullName>Scott McLinn</fullName>
            </value>
            <value>
                <fullName>Oliver Wai</fullName>
            </value>
            <value>
                <fullName>Jay Borenstein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>