Doc/force-app/main/default/objects/Lead/fields/Carpe_Diem__c.field-meta.xml
<CustomField>
    <fullName>Carpe_Diem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Carpe Diem</label>
    <type>Checkbox</type>
</CustomField>