Doc/force-app/main/default/objects/Lead/fields/CASL_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CASL_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASL Compliance</label>
    <type>Checkbox</type>
</CustomField>