Doc/force-app/main/default/objects/Lead/fields/CCPA_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CCPA_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCPA Compliance</label>
    <type>Checkbox</type>
</CustomField>