Doc/force-app/main/default/objects/Lead/fields/DiData__c.field-meta.xml
<CustomField>
    <fullName>DiData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DiData</label>
    <type>Checkbox</type>
</CustomField>