Doc/force-app/main/default/objects/Lead/fields/Elite__c.field-meta.xml
<CustomField>
    <fullName>Elite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Elite (SQL)</label>
    <type>Checkbox</type>
</CustomField>