Doc/force-app/main/default/objects/Lead/fields/Enagement_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enagement_Trigger__c</fullName>
    <description>engagement trigger (partial)</description>
    <label>IntApp Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold Contact</fullName>
            </value>
            <value>
                <fullName>Inbound Contact</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>LawNet 2004</fullName>
            </value>
            <value>
                <fullName>Apr04 Webinar</fullName>
            </value>
            <value>
                <fullName>Jul04 Webinar</fullName>
            </value>
            <value>
                <fullName>Oct04 Webinar</fullName>
            </value>
            <value>
                <fullName>Jan05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>Feb05 Webinar</fullName>
            </value>
            <value>
                <fullName>Mar05 Role Play</fullName>
            </value>
            <value>
                <fullName>Apr05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>May05 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>Jul05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>Jul05 Small Firm Email</fullName>
            </value>
            <value>
                <fullName>Aug05 ILTA Show</fullName>
            </value>
            <value>
                <fullName>Sep05 ILTA Webinar</fullName>
            </value>
            <value>
                <fullName>Sep05 Northeast Outreach</fullName>
            </value>
            <value>
                <fullName>Oct05 Midsized Webinar</fullName>
            </value>
            <value>
                <fullName>Nov05 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>Nov05 3.2 Webinar</fullName>
            </value>
            <value>
                <fullName>Feb06 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>LegalTech 06</fullName>
            </value>
            <value>
                <fullName>2006 ED Mailing</fullName>
            </value>
            <value>
                <fullName>Apr06 Ethical Walls Campaign</fullName>
            </value>
            <value>
                <fullName>Apr06 Calling Campaign</fullName>
            </value>
            <value>
                <fullName>2006 Regional Events</fullName>
            </value>
            <value>
                <fullName>Jun06 ILTA PM Webinar</fullName>
            </value>
            <value>
                <fullName>Jun06 Elite Conference</fullName>
            </value>
            <value>
                <fullName>Aug06 ILTA Show</fullName>
            </value>
            <value>
                <fullName>Jul06 ILTA Calling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>