Doc/force-app/main/default/objects/Lead/fields/Entre_HR__c.field-meta.xml
<CustomField>
    <fullName>Entre_HR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entre (HR)</label>
    <type>Checkbox</type>
</CustomField>