Doc/force-app/main/default/objects/Lead/fields/Ethical_Walls__c.field-meta.xml
<CustomField>
    <fullName>Ethical_Walls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethical Walls</label>
    <type>Checkbox</type>
</CustomField>