Doc/force-app/main/default/objects/Lead/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Exchange</label>
    <type>Checkbox</type>
</CustomField>