Doc/force-app/main/default/objects/Lead/fields/Explicit_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>Explicit_Opt_in_Date__c</fullName>
    <description>For Ticket #38821</description>
    <label>Explicit Opt-in Date</label>
    <type>Date</type>
</CustomField>