Doc/force-app/main/default/objects/Lead/fields/FileSurf__c.field-meta.xml
<CustomField>
    <fullName>FileSurf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>FileSurf</label>
    <type>Checkbox</type>
</CustomField>