Doc/force-app/main/default/objects/Lead/fields/GDPR_Compliance__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Compliance</label>
    <type>Checkbox</type>
</CustomField>