Doc/force-app/main/default/objects/Lead/fields/GroupWise__c.field-meta.xml
<CustomField>
    <fullName>GroupWise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>GroupWise</label>
    <type>Checkbox</type>
</CustomField>