Doc/force-app/main/default/objects/Lead/fields/Handshake__c.field-meta.xml
<CustomField>
    <fullName>Handshake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handshake</label>
    <type>Checkbox</type>
</CustomField>