Doc/force-app/main/default/objects/Lead/fields/Hummingbird_DMx__c.field-meta.xml
<CustomField>
    <fullName>Hummingbird_DMx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hummingbird - DMx</label>
    <type>Checkbox</type>
</CustomField>