Doc/force-app/main/default/objects/Lead/fields/Hummingbird_DOCS__c.field-meta.xml
<CustomField>
    <fullName>Hummingbird_DOCS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hummingbird - DOCS</label>
    <type>Checkbox</type>
</CustomField>