Doc/force-app/main/default/objects/Lead/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Interaction</label>
    <type>Checkbox</type>
</CustomField>