Doc/force-app/main/default/objects/Lead/fields/IPMaster__c.field-meta.xml
<CustomField>
    <fullName>IPMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IPMaster</label>
    <type>Checkbox</type>
</CustomField>