Doc/force-app/main/default/objects/Lead/fields/iVantage__c.field-meta.xml
<CustomField>
    <fullName>iVantage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>iVantage</label>
    <type>Checkbox</type>
</CustomField>