Doc/force-app/main/default/objects/Lead/fields/Javelan__c.field-meta.xml
<CustomField>
    <fullName>Javelan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Javelan</label>
    <type>Checkbox</type>
</CustomField>