Doc/force-app/main/default/objects/Lead/fields/Juris__c.field-meta.xml
<CustomField>
    <fullName>Juris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Juris</label>
    <type>Checkbox</type>
</CustomField>