Doc/force-app/main/default/objects/Lead/fields/LawPort__c.field-meta.xml
<CustomField>
    <fullName>LawPort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LawPort</label>
    <type>Checkbox</type>
</CustomField>