Doc/force-app/main/default/objects/Lead/fields/LDAP__c.field-meta.xml
<CustomField>
    <fullName>LDAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>LDAP</label>
    <type>Checkbox</type>
</CustomField>