Doc/force-app/main/default/objects/Lead/fields/Legal_Key__c.field-meta.xml
<CustomField>
    <fullName>Legal_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>LegalKey</label>
    <type>Checkbox</type>
</CustomField>