Doc/force-app/main/default/objects/Lead/fields/Matched_Tier__c.field-meta.xml
<CustomField>
    <fullName>Matched_Tier__c</fullName>
    <formula>&apos; &apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Tier</label>
    <type>Text</type>
</CustomField>