Doc/force-app/main/default/objects/Lead/fields/Most_Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign__c</fullName>
    <description>CR#45758</description>
    <label>Most Recent Campaign</label>
    <length>160</length>
    <type>Text</type>
</CustomField>