Doc/force-app/main/default/objects/Lead/fields/Oracle__c.field-meta.xml
<CustomField>
    <fullName>Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>Oracle</label>
    <type>Checkbox</type>
</CustomField>