Doc/force-app/main/default/objects/Lead/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <description>case #39904.
Field to store personal email in addition to business email.</description>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>