Doc/force-app/main/default/objects/Lead/fields/Portals_and_Intranets__c.field-meta.xml
<CustomField>
    <fullName>Portals_and_Intranets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portals and Intranets</label>
    <type>Checkbox</type>
</CustomField>