Doc/force-app/main/default/objects/Lead/fields/Records_System__c.field-meta.xml
<CustomField>
    <fullName>Records_System__c</fullName>
    <label>Records System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Autonomy IRM</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Documentum RM</fullName>
            </value>
            <value>
                <fullName>Elite Records</fullName>
            </value>
            <value>
                <fullName>IRIS Laserform</fullName>
            </value>
            <value>
                <fullName>LegalKEY Records</fullName>
            </value>
            <value>
                <fullName>MDY Filesurf</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>StarLaw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>