Doc/force-app/main/default/objects/Lead/fields/Rightfax__c.field-meta.xml
<CustomField>
    <fullName>Rightfax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rightfax</label>
    <type>Checkbox</type>
</CustomField>