Doc/force-app/main/default/objects/Lead/fields/SQL_Server__c.field-meta.xml
<CustomField>
    <fullName>SQL_Server__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Application Choice</description>
    <label>SQL Server</label>
    <type>Checkbox</type>
</CustomField>