Doc/force-app/main/default/objects/Lead/fields/Summation__c.field-meta.xml
<CustomField>
    <fullName>Summation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summation</label>
    <type>Checkbox</type>
</CustomField>