Doc/force-app/main/default/objects/Lead/fields/Time_Management__c.field-meta.xml
<CustomField>
    <fullName>Time_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Challenge choice</description>
    <label>Time Management</label>
    <type>Checkbox</type>
</CustomField>