Doc/force-app/main/default/objects/Lead/fields/VoIP_Integration__c.field-meta.xml
<CustomField>
    <fullName>VoIP_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VoIP Integration</label>
    <type>Checkbox</type>
</CustomField>