Doc/force-app/main/default/objects/Lead/fields/Web_Comments__c.field-meta.xml
<CustomField>
    <fullName>Web_Comments__c</fullName>
    <description>Comments from web intake form</description>
    <label>Web Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>