Doc/force-app/main/default/objects/Lead/fields/Web_Entry__c.field-meta.xml
<CustomField>
    <fullName>Web_Entry__c</fullName>
    <label>Web Entry</label>
    <length>12</length>
    <type>Text</type>
</CustomField>