Doc/force-app/main/default/objects/Lead/fields/Web_RFI_Webinars__c.field-meta.xml
<CustomField>
    <fullName>Web_RFI_Webinars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web RFI - Webinars</label>
    <type>Checkbox</type>
</CustomField>