Doc/force-app/main/default/objects/Lead/fields/Worlddox__c.field-meta.xml
<CustomField>
    <fullName>Worlddox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worldox</label>
    <type>Checkbox</type>
</CustomField>