Doc/force-app/main/default/objects/Lead/recordTypes/PartnerLead.recordType-meta.xml
<RecordType>
    <fullName>PartnerLead</fullName>
    <active>true</active>
    <businessProcess>Partner Process</businessProcess>
    <description>The lead record type to be used by partners.</description>
    <label>Partner Lead</label>
</RecordType>