Doc/force-app/main/default/objects/Lead/recordTypes/ProspectLead.recordType-meta.xml
<RecordType>
    <fullName>ProspectLead</fullName>
    <active>true</active>
    <businessProcess>Prospect Invitation Process</businessProcess>
    <description>Use this Lead record type to identify the Leads to be invited to the Prospect webinar</description>
    <label>Prospect Lead</label>
</RecordType>