Doc/force-app/main/default/objects/Lead/listViews/Inbound_Email.listView-meta.xml
<ListView>
    <fullName>Inbound_Email</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Tsunami_Lead_Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Inbound Email</value>
    </filters>
    <filters>
        <field>Tsunami_Lead_Type__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <label>Inbound Email</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>