Doc/force-app/main/default/objects/Lead/listViews/MarketingDB.listView-meta.xml
<ListView>
    <fullName>MarketingDB</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Tsunami_Lead_Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jasony,danb,leas</value>
    </filters>
    <filters>
        <field>Tsunami_Lead_Type__c</field>
        <operation>notEqual</operation>
        <value>Expired</value>
    </filters>
    <label>Marketing-DB</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>