Doc/force-app/main/default/objects/Lead/listViews/Marketplace_Leads.listView-meta.xml
<ListView>
    <fullName>Marketplace_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Web_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>Marketplace Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>