Doc/force-app/main/default/objects/Lead/listViews/Recycled_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Recycled_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Recycled Lead Queue</label>
    <queue>Recycled_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>