Doc/force-app/main/default/objects/Lead/listViews/Risk_Whitepapers.listView-meta.xml
<ListView>
    <fullName>Risk_Whitepapers</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Tsunami_Lead_Type__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Risk Whitepapers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>